--- a/FootLand/templates/analytics.html
+++ b/FootLand/templates/analytics.html
@@ -172,7 +172,7 @@
                 <li><a href="{% url 'admin_dashboard' %}"><i class="fas fa-home"></i> Dashboard</a></li>
                 <li><a href="{% url 'view_product' %}"><i class="fas fa-box"></i> Products</a></li>
                 <li><a href="{% url 'view_customers' %}"><i class="fas fa-users"></i> Customers</a></li>
-                <li><a href="{% url 'vendors' %}"><i class="fas fa-store"></i> Vendors</a></li>
+                <li><a href="{% url 'view_vendors' %}"><i class="fas fa-store"></i> Vendors</a></li>
                 <li><a href="{% url 'view_orders' %}"><i class="fas fa-shopping-cart"></i> Orders</a></li>
                 <li><a href="{% url 'analytics' %}" class="active"><i class="fas fa-chart-bar"></i> Analytics</a></li>
                 <li><a href="{% url 'logout' %}"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
