--- a/FootLand/templates/view_customers.html
+++ b/FootLand/templates/view_customers.html
@@ -207,7 +207,7 @@
                     </div>
                 </li>
                 <li><a href="{% url 'view_customers' %}" class="active"><i class="fas fa-users"></i> Customers</a></li>
-                <li><a href="{% url 'vendors' %}"><i class="fas fa-store"></i> Vendors</a></li>
+                <li><a href="{% url 'view_vendors' %}"><i class="fas fa-store"></i> Vendors</a></li>
                 <li><a href="{% url 'view_orders' %}"><i class="fas fa-shopping-cart"></i> Orders</a></li>
                 <li><a href="{% url 'analytics' %}"><i class="fas fa-chart-bar"></i> Analytics</a></li>
                 <li><a href="{% url 'logout' %}"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
